fixed overflow on screen

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -94,11 +94,19 @@ header h4{
   padding:.7rem;
   text-align: right;
   vertical-align: middle;
+  overflow:scroll
+}
+.screen::-webkit-scrollbar {
+  display: none;
+}
+.screen{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 .screen p{
   width:100%;
   height:100%;
-  padding-top:3%;
+  padding-top:1%;
   font-size: 32px;
 }
 
